| Bug #21478 | Incorrect logpart after "noderestart --initial" followed by noderestart | ||
|---|---|---|---|
| Submitted: | 7 Aug 2006 14:12 | Modified: | 1 Sep 2006 18:18 |
| Reporter: | Jonas Oreland | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | 5.1 | OS: | |
| Assigned to: | Jonas Oreland | Target Version: | |
[7 Aug 2006 14:12]
Jonas Oreland
[7 Aug 2006 14:33]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/10116 ChangeSet@1.2264, 2006-08-07 14:32:43+02:00, jonas@perch.ndb.mysql.com +1 -0 ndb - bug#21478 make fragment logpart in DIH "global"
[1 Sep 2006 10:04]
Jonas Oreland
pushed to 5.1.12
[1 Sep 2006 18:18]
Jon Stephens
Documented incompatible change in 5.1.12 changelog, Cluster Upgrades/Downgrades seciton of Manual.
