ndb - bug#21478   make fragment logpart in DIH "global"

storage/ndb/src/kernel/blocks/dbdih/DbdihMain.cpp:
  Store logpart id in FRAGMENTATION as it goes very bad if 
    they differ on different nodes, as they are copied from master
    on node/system -restart